# ACM_training

./: .gitignore
ACM/ACM/: ACM.depend  ACM.layout  main.cpp
ACM/ACM1/: ACM1.cbp  main.c
ACM/ACM1113/: ACM1113.cbp  ACM1113.depend  ACM1113.layout  main.cpp
ACM/ACM1228/: ACM1228.cbp  ACM1228.depend  ACM1228.layout  main.cpp  test.cpp  test2.cpp
ACM/ACM1827/: ACM1827.cbp  ACM1827.depend  main.cpp
ACM/ACM2007/: ACM2007.cbp  ACM2007.depend  ACM2007.layout  main.cpp
ACM/ACMs/: ACMs.cbp  ACMs.depend  ACMs.layout  Best_Cost_Line.h  Breadth_first_search.h  DP.h  Lak_Couting.h  Mazes.h  Partial_Sums.cpp  Partial_Sums.h  heap.h  main.cpp
BeautyOfProgramming/Header/: BP_Elevator.h  main.cpp
Five_Hundred_Programming/: .~00编程题目.docx  500编程题目.docx  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main.cpp
Five_Hundred_Programming/Header/Array/: QuickSort_New.h  _10_MoveEnd0.h  _11_MergeSorted_Inplace.h  _12_MergeSortForConstaint.h  _13_Find_lengthest_subarr.h  _14_Find_maximum_len_01.h  _15_FindIndex0ForMax.h  _16_FindMaxProduct.h  _17_ReplaceArrayDivision.h  _18_Find_Duplicated.h  _19_Find_Largest_SubArr.h  _1_FindPairForSum.h  _20_Find_Longest_Bitnic.h  _21_Find_Max_Diff.h  _22_23_Find_Print_Max_Sub_Sum.h  _24_Find_Max_Sub_SumForCircule.h  _25_Find_Distinct_Combination.h  _26_Find_Distinct_Comb_Repeat.h  _27_Find_Max_Sub1_k.h  _28_Find_Min_By_K.h  _29_Find_Sum_In_Array.h  _2_3_Print_All_subseq_sum_zero.h  _30_Find_MinLen_For_Sum.h  _31_Find_Max_Number.h  _32_Find_Min_Win_Sort.h  _33_Find_Max_Path_Two_Arr.h  _34_Find_Max_Profit.h  _35_Trapping_Rain_Water_Bar.h  _36_MaxLen_Sub_Inc.h  _37_Find_MaxSub_Product.h  _38_Find_Max_Subseq.h  _39_Decode_array_from_another.h  _41_find_triplet_sum.h  _4_RerangeArray.h  _5_Sort_Binary_Array.h  _6_SortArray012.h  _7_Shuffle_Array.h  _8_FindEquilibrium.h  _9_Find_Majority.h
Five_Hundred_Programming/Header/Backtracking/: _10_FindPermutationsString.h  _11_FindAllBinaryStringsWithpattern.h  _1_findEightQueens.h  _2_printAllKnightTours.h  _3_MagnetPuzzle.h  _4_FindShortPathMaze.h  _5_FindLongestRoutMatrix.h  _6_FindPathSatisfyConstrains.h  _7_FindNumPathsMaze.h  _8_printAllHamiltonianPath.h  _9_KcolorableConfig.h
Five_Hundred_Programming/scripts/: acm_problem.xmind
Five_Hundred_Programming/src/: CMakeLists.txt  CTestTestfile.cmake  Makefile  Test.cpp
STL/Header/: learning_C++_Class.h  learning_DFS_BFS.h  learning_algorithm.h  learning_bingcha.h  learning_critial_path.h  learning_deque_list.h  learning_heap.h  learning_kmp.h  learning_map.h  learning_minimum_path.h  learning_minimum_tree.h  learning_offer.h  learning_queue_stack.h  learning_set_pair.h  learning_sorts.h  learning_string.h  learning_string_split.h  learning_traverse_tree.h  learning_tubao.h  learning_two_search_tree.h  learning_vector.h  learning_virtual_class_func.h
